--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "argon2": "^0.28.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -16,6 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.4.0",
+    "winston-daily-rotate-file": "^4.6.0"
   }
 }
